# DSP

DSP/: CMakeLists.txt
DSP/include/DSP/: dsp_types.h
DSP/include/DSP/Discrete/: Derivative.h  Discontinuous.h  Integrator.h  Signal.h  pidController.h  zStateObserver.h  zStateSpace.h  zTransferFunction.h
DSP/include/DSP/Math/: Matrix.h  Polynomial.h  Vector.h
DSP/src/: CMakeLists.txt  Derivative.c  Discontinuous.c  Integrator.c  Matrix.c  Polynomial.c  Signal.c  Vector.c  pidController.c  zStateObserver.c  zStateSpace.c  zTransferFunction.c
examples/: CMakeLists.txt  SFB__dspc_pid__SFB.mat  check_discrete_results.m  check_math_results.m  check_model.slx  dspc_pid.c  dspc_pid.mexw64  dspc_pid_wrapper.c  test.c
